# Chat-SQL

./: .coverage  .coveragerc  .env_example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  compose.yaml  pyproject.toml
src/chat_sql/: app.py  main.py  tools.py  utils.py
tests/integration/: test_function_call.py
tests/unit/: unit_test.py
